# alaska

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
compiler/: Cargo.toml
compiler-core/: Cargo.toml
compiler-core/src/lexer/: line_number.rs  mod.rs  rules.rs
compiler-core/src/parser/: ast.rs  error.rs  expressions.rs  hierarchy.rs  mod.rs  statement.rs
compiler-core/src/sema/: mod.rs  sym.rs  typ.rs
compiler/include/: ast.h  defines.h  lexer.h  parser.h
compiler/lib/containers/: dynarray.c  dynarray.h  hashmap.c  hashmap.h  list.c  list.h  list_iterator.c  list_node.c
compiler/src/: ast.c  defines.h  lexer.c  lib.rs  main.c  parser.c
compiler/src/benches/: main.rs
compiler/src/containers/: dynarray.c
compiler/src/eval/: mod.rs  sym.rs
compiler/src/lexer/: lexer.c  lexer.h  mod.rs  rules.rs  token.rs
compiler/src/parser/: ast.rs  error.rs  expressions.rs  hierarchy.rs  mod.rs
compiler/src/sema/: mod.rs  sym.rs
compiler/tests/: rest.ask  test.ak  test.ask  tests.c
docs/: grammar.ebnf  grammar.md
inputs/: full.ask  simple.ask  test.ask
src/: args.rs  main.c  main.rs
tests/: it.rs
